name:                align-affine
version:             0.1.0.0
synopsis:            Sequence alignment with affine gap penalty.
description:         Global alignment using the Center Star algorithm, with affine gap penalty.
license:             BSD3
license-file:        LICENSE.md
author:              Charles Li
maintainer:          charles.li@ehess.fr
category:            Data
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type: git
  location: https://github.com/chchch/align-affine.git

library
  exposed-modules:     Data.Align.Affine
  build-depends:       base >=4.6 && <5,
                       containers >=0.6 && <0.7,
                       transformers >=0.5 && <0.7,
                       vector >=0.1 && <0.13
  hs-source-dirs:      src
  default-language:    Haskell98
  ghc-options:         -Wall
