name:                align-affine
version:             0.1.0.0
synopsis:            Sequence alignment with affine gap penalty.
description:         Global alignment using the Center Star algorithm, with affine gap penalty.
license:             BSD3
license-file:        LICENSE
author:              Charles Li
maintainer:          charles.li@ehess.fr
category:            Data
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type: git
  location: https://github.com/chchch/align-affine.git

library
  exposed-modules:     Data.Align.Affine
  build-depends:       base >=4.6 && <5,
                       containers,
                       transformers,
                       vector >=0.10
  hs-source-dirs:      src
  default-language:    Haskell98
  ghc-options:         -Wall
